--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,11 @@
   		<artifactId>resteasy-jaxrs</artifactId>
   		<version>3.0.5.Final</version>
   	</dependency>
+  	<dependency>
+  		<groupId>org.hsqldb</groupId>
+  		<artifactId>hsqldb</artifactId>
+  		<version>2.3.1</version>
+  	</dependency>
   </dependencies>
   <build>
   	<plugins>
