--- a/pom.xml
+++ b/pom.xml
@@ -65,22 +65,30 @@
   		<groupId>org.jboss.resteasy</groupId>
   		<artifactId>resteasy-jaxb-provider</artifactId>
   		<version>3.0.5.Final</version>
+  		<scope>provided</scope>
   	</dependency>
   	<dependency>
   		<groupId>org.jboss.resteasy</groupId>
   		<artifactId>resteasy-jettison-provider</artifactId>
   		<version>3.0.5.Final</version>
+  		<scope>provided</scope>
   	</dependency>
   	<dependency>
   		<groupId>org.jboss.resteasy</groupId>
   		<artifactId>resteasy-jaxrs</artifactId>
   		<version>3.0.5.Final</version>
+  		<scope>provided</scope>
   	</dependency>
   	<dependency>
   		<groupId>org.hsqldb</groupId>
   		<artifactId>hsqldb</artifactId>
   		<version>2.3.1</version>
   	</dependency>
+  	         <dependency>
+            <groupId>org.reflections</groupId>
+            <artifactId>reflections</artifactId>
+            <version>0.9.9-RC1</version>
+         </dependency>
   </dependencies>
   <build>
   	<plugins>
